--- a/src/app/scotches/view/third-tastings-table/third-tastings-table.template.html
+++ b/src/app/scotches/view/third-tastings-table/third-tastings-table.template.html
@@ -21,6 +21,14 @@
               styleClass="dateColumn">
   </app-column>
   <app-column  
+              fieldName="location" 
+              header="Source" 
+              sortable="true" 
+              filterable="true" 
+              dataType="text" 
+              styleClass="textColumn">
+  </app-column>
+  <app-column  
               fieldName="nose" 
               header="Nose" 
               sortable="true" 
