--- a/src/app/tasting/list/list.template.html
+++ b/src/app/tasting/list/list.template.html
@@ -24,6 +24,14 @@
               styleClass="dateColumn">
   </app-column>
   <app-column  
+              fieldName="location" 
+              header="Location/Source" 
+              sortable="true" 
+              filterable="true" 
+              dataType="text" 
+              styleClass="textColumn">
+  </app-column>
+  <app-column  
               fieldName="dramName" 
               header="Dram" 
               sortable="true" 
