--- a/src/assets/partials/edit-dialog/edit-dialog.component.html
+++ b/src/assets/partials/edit-dialog/edit-dialog.component.html
@@ -15,7 +15,8 @@
       <app-wishlist-edit-form [wishlist]="editedObject" *ngIf="dialogType==='wishlist'"></app-wishlist-edit-form>
       <app-wishlist-select-form [wishlist]="editedObject" *ngIf="dialogType==='wishlist-select'"></app-wishlist-select-form>
       <app-scotch-select-form [scotch]="editedObject" *ngIf="dialogType==='scotch-select'"></app-scotch-select-form>
-      <!-- <app-signin-form [credentials]="editedObject" *ngIf="dialogType==='signin'"></app-signin-form> -->
+      <app-signin-form [user]="editedObject" *ngIf="dialogType==='signin'"></app-signin-form>
+      <app-signup-form [user]="editedObject" *ngIf="dialogType==='signup'"></app-signup-form>
       <app-style-edit-form [style]="editedObject" *ngIf="dialogType==='style'"></app-style-edit-form>
       <app-region-edit-form [region]="editedObject" *ngIf="dialogType==='region'"></app-region-edit-form>
       <app-price-edit-form [price]="editedObject" *ngIf="dialogType==='price'"></app-price-edit-form>
