--- a/src/assets/partials/page-header/page-header.component.html
+++ b/src/assets/partials/page-header/page-header.component.html
@@ -10,8 +10,8 @@
 				<a (click)="onSelect('prices')"><i class="fa fa-dollar"></i> Price List</a>
 				<hr>
 				<a (click)="onSelect('settings')"><i class="fa fa-gear"></i> Settings</a>
-				<hr>
-				<a (click)="onSelect('signout')"><i class="fa fa-sign-out"></i> Sign Out</a>
+				<!-- <hr>
+				<a (click)="onSelect('signout')"><i class="fa fa-sign-out"></i> Sign Out</a> -->
 			</div>
 		</div>
 	</div>
