corrected html template issues with new item calls

--- a/src/app/lookup/lookup.component.html
+++ b/src/app/lookup/lookup.component.html
@@ -11,7 +11,7 @@
                 editButton="true" 
                 deleteButton="true" 
                 filterButton="false"
-                (newItem)="addStyle($event)"
+                (newItem)="addStyle()"
                 (editItem)="editStyle($event)"
                 (deleteItem)="confirmDeleteStyle($event)">
           <app-column  
@@ -36,7 +36,7 @@
                 editButton="true" 
                 deleteButton="true" 
                 filterButton="false"
-                (newItem)="addRegion($event)"
+                (newItem)="addRegion()"
                 (editItem)="editRegion($event)"
                 (deleteItem)="confirmDeleteRegion($event)">
           <app-column  
