--- a/src/app/scotches/list/list.template.html
+++ b/src/app/scotches/list/list.template.html
@@ -11,7 +11,7 @@
        newButton="true"
        filterButton="true"
        (showDetails)="showDetails($event)" 
-       (newItem)="addScotch($event)"
+       (newItem)="addScotch()"
        (editItem)="editScotch($event)"
        (deleteItem)="confirmDeleteScotch($event)">
   <app-column  
