--- a/src/app/scotches/view/notes-table/notes-table.template.html
+++ b/src/app/scotches/view/notes-table/notes-table.template.html
@@ -8,8 +8,7 @@
                 editButton="true" 
                 deleteButton="true" 
                 filterButton="false"
-                (showDetails)="showDetails($event)" 
-                (newItem)="addNote($event)"
+                (newItem)="addNote()"
                 (editItem)="editNote($event)"
                 (deleteItem)="confirmDeleteNote($event)">
           <app-column  
