--- a/src/app/scotches/view/prices-table/prices-table.template.html
+++ b/src/app/scotches/view/prices-table/prices-table.template.html
@@ -10,8 +10,7 @@
                 editButton="true" 
                 deleteButton="true" 
                 filterButton="true"
-                (showDetails)="showDetails($event)" 
-                (newItem)="addPrice($event)"
+                (newItem)="addPrice()"
                 (editItem)="editPrice($event)"
                 (deleteItem)="confirmDeletePrice($event)">
           <app-column  
