--- a/src/app/scotches/view/third-tastings-table/third-tastings-table.template.html
+++ b/src/app/scotches/view/third-tastings-table/third-tastings-table.template.html
@@ -9,7 +9,7 @@
        newButton="true"
        filterButton="true"
        (showDetails)="showTastingDetails($event)" 
-       (newItem)="addTasting($event)"
+       (newItem)="addTasting()"
        (editItem)="editTasting($event)"
        (deleteItem)="confirmDeleteTasting($event)">
   <app-column  
