--- a/src/app/scotches/view/wishlists-table/wishlists-table.template.html
+++ b/src/app/scotches/view/wishlists-table/wishlists-table.template.html
@@ -8,7 +8,7 @@
                 editButton="false" 
                 deleteButton="true" 
                 filterButton="true"
-                (newItem)="addWishlist($event)"
+                (newItem)="addWishlist()"
                 (editItem)="editWishlist($event)"
                 (deleteItem)="confirmDeleteWishlist($event)"
                 (doNavigate)="navigate($event)">
