--- a/src/app/tasting/list/list.template.html
+++ b/src/app/tasting/list/list.template.html
@@ -11,7 +11,7 @@
        newButton="false"
        filterButton="true"
        (showDetails)="showDetails($event)" 
-       (addItem)="addTasting($event)"
+       (addItem)="addTasting()"
        (editItem)="editTasting($event)"
        (deleteItem)="confirmDeleteTasting($event)"
        (doNavigate)="navigate($event)">
