--- a/src/app/wishlist/list/list.template.html
+++ b/src/app/wishlist/list/list.template.html
@@ -10,7 +10,7 @@
        deleteButton="true" 
        filterButton="true"
        (showDetails)="showDetails($event)" 
-       (newItem)="addWishlist($event)"
+       (newItem)="addWishlist()"
        (editItem)="editWishlist($event)"
        (deleteItem)="confirmDeleteWishlist($event)">
   <app-column  
