--- a/src/app/scotches/view/tastings-table/tastings-table.template.html
+++ b/src/app/scotches/view/tastings-table/tastings-table.template.html
@@ -10,7 +10,7 @@
        newButton="true"
        filterButton="true"
        (showDetails)="showTastingDetails($event)" 
-       (newItem)="addTasting($event)"
+       (newItem)="addTasting()"
        (editItem)="editTasting($event)"
        (deleteItem)="confirmDeleteTasting($event)">
   <app-column  
