more http related tweaks

--- a/src/styles/dialogs.css
+++ b/src/styles/dialogs.css
@@ -22,7 +22,7 @@
     padding: 3px;
     border: 1px solid #374f3a;
     border-radius: 6px;
-    max-width: 30%;  Could be more or less, depending on screen size */
+    max-width: 30%;  /*Could be more or less, depending on screen size */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.8s;
