--- a/src/app/home/home.template.html
+++ b/src/app/home/home.template.html
@@ -3,6 +3,8 @@
     <img src="/assets/img/logo.png" height=200px width=200px alt="Logo"><br>
     <span class="caption">Angus McScotchy, III</span>
 </div>
+{{ authenticated }}<br>
+{{ user }}
 
 <div *ngIf="user && authenticated">
   <div [ngClass]="'navbar'">
